--- a/InvisaWrap/index.html
+++ b/InvisaWrap/index.html
@@ -68,8 +68,8 @@
 
   <div>
       Logo
-      <figure class="image is-128x128">
-            <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
+      <figure class="image is-128x128 logoDiv ">
+            <img class="is-rounded logo" src="https://bulma.io/images/placeholders/128x128.png">
     </figure>
   </div>
   <h1 id = "products"></h1>
@@ -78,14 +78,6 @@
     <video autoplay muted loop id="myVideo">
         <source src="RAIN.mp4" type="video/mp4">
     </video>
-    <section class="section">
-        <div class="container">
-            <h1 class="title"> Hello World </h1>
-            <p class="subtitle">
-                My first website with <strong>Bulma</strong>!
-            </p>
-        </div>
-        </section>
         <!-- Begin Mailchimp Signup Form -->
         <div id="mc_embed_signup">
                 <form action="https://mittymonarch.us20.list-manage.com/subscribe/post?u=0ad289630d83b4d9054781230&amp;id=d2ef97d6ad" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
