--- a/InvisaWrap/index.html
+++ b/InvisaWrap/index.html
@@ -4,7 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hello Bulma!</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
+
+
+
     <link rel="stylesheet" href="css/main.css"></link>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="./app.js"></script>
@@ -119,11 +124,6 @@
           
           </div>
 
-
-
-    <video  autoplay muted loop id="myVideo">
-            <source src="RAIN.mp4" type="video/mp4">
-    </video>
     <div class ="showModal"><button class="button " id="showModal">Subscribe To Our Newsletter</button>
     </div>
 
@@ -134,7 +134,62 @@
 
   </div>
   <h1 id = "products"></h1>
-   
+
+
+  <div class ="productImages">
+
+          <figure class="image is-480x800">
+              <img src="https://cdn.shopify.com/s/files/1/1614/0005/products/SARA-14-276CLR_530x.jpg?v=1545148079">
+           </figure>
+          <figure class="image is-480x800">
+              <img src="https://cdn.shopify.com/s/files/1/1614/0005/products/SARA-14-276CLR_530x.jpg?v=1545148079">
+           </figure>
+          <figure class="image is-480x800">
+               <img src="https://cdn.shopify.com/s/files/1/1614/0005/products/SARA-14-276CLR_530x.jpg?v=1545148079">
+          </figure>
+  </div>
+
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        </ol>
+
+  <div class="carousel-inner">
+
+
+        <div class="carousel-item active">
+
+            <img id = "Italy" class="d-block w-100" src="https://cdn.shopify.com/s/files/1/1614/0005/products/SARA-14-276CLR_530x.jpg?v=1545148079" alt="First slide">
+        </div>
+
+        <div class="carousel-item">
+
+            <img id= "Greece" class="d-block w-100" src="https://cdn.shopify.com/s/files/1/1614/0005/products/SARA-14-276CLR_530x.jpg?v=1545148079" alt="Second slide">
+        </div>
+
+        <div class="carousel-item">
+
+            <img id= "Spain" class="d-block w-100" src="https://cdn.shopify.com/s/files/1/1614/0005/products/SARA-14-276CLR_530x.jpg?v=1545148079" alt="Third slide">
+        </div>
+
+        <div class="carousel-item">
+            <img id= "India" class="d-block w-100" src="https://cdn.shopify.com/s/files/1/1614/0005/products/SARA-14-276CLR_530x.jpg?v=1545148079" alt="Fourth slide">
+        </div>
+
+</div>
+
+     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+       <span class="sr-only">Previous</span>
+     </a>
+     <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+       <span class="carousel-control-next-icon" aria-hidden="true"></span>
+       <span class="sr-only">Next</span>
+     </a>
+</div>
 
         <!-- Begin Mailchimp Signup Form -->
        
@@ -156,19 +211,6 @@
                     </div>
 
 
-                    <h1 id = "products">Products</h1>
-                    <div class ="productImages">
-
-                            <figure class="image is-480x800">
-                                <img src="https://bulma.io/images/placeholders/256x256.png">
-                             </figure>
-                            <figure class="image is-480x800">
-                                <img src="https://bulma.io/images/placeholders/256x256.png">
-                             </figure>
-                            <figure class="image is-480x800">
-                                 <img src="https://bulma.io/images/placeholders/256x256.png">
-                            </figure>
-                    </div>
 
 
 
@@ -216,6 +258,7 @@
 
                     <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
                     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+                    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
                     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </body>
